Table film {
  film_id integer [primary key, increment]
  name varchar [not null]
  description text
  release_date date [not null]
  duration integer [not null]
  rating_id integer [ref: > mpa_rating.rating_id, not null]
}

Table mpa_rating {
  rating_id integer [primary key]
  name varchar [not null, unique]
}

Table genre {
  genre_id integer [primary key]
  name varchar [not null, unique]
}

Table film_genre {
  film_id integer [ref: > film.film_id, primary key]
  genre_id integer [ref: > genre.genre_id, primary key]
}

Table users {
  user_id integer [primary key, increment]
  email varchar [not null, unique]
  login varchar [not null]
  name varchar [not null, note: 'если не указано при создании - подставляется логин']
  birthday date [not null]
}

Table film_like {
  film_id integer [ref: > film.film_id, primary key]
  user_id integer [ref: > users.user_id, primary key]
}

Table friendship {
  user_id integer [ref: > users.user_id, primary key]
  friend_id integer [ref: > users.user_id, primary key]
  status boolean [note: 'true- подтвержденная, false - неподтвержденная']
}